Prevent missing border for inputs outside the charsheet

--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -26,7 +26,7 @@
 .autoexpand {
  box-sizing: content-box;
 }
-input[type="text"]{
+.shadowrun6 input[type="text"]{
         font-variant-numeric: lining-nums;
         border: 0px solid black;
         background: none;
